# myVault

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  PAUSED.md  PROJECT_PLAN.md  README.md  SECURITY.md  SESSION_HANDOFF.md  package.json  pnpm-lock.yaml
.github/workflows/: platform-build.yml  quality.yml
apps/tauri/: DESIGN.md  README.md  index.html  package.json
apps/tauri/src/: App.css  App.tsx  SyncPanel.tsx  reader.test.ts  reader.ts  sync.test.ts  sync.ts  workspace.test.ts  workspace.ts
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/src/: android_transfer_policy.rs  android_transfer_runtime.rs  app_commands.rs  lib.rs  sync_commands.rs  transfer_runtime.rs
apps/tauri/src/spike/: fixture.test.ts  fixture.ts  metrics.test.ts  metrics.ts
crates/desktop-auth/: Cargo.toml  README.md
crates/desktop-auth/src/: lib.rs
crates/desktop-auth/tests/: os_keyring.rs
crates/drive-sync-spike/: Cargo.toml
crates/drive-sync-spike/src/: lib.rs  rest.rs
crates/myvault-app-service/: Cargo.toml
crates/myvault-app-service/src/: lib.rs  transfer.rs
crates/myvault-app-service/tests/: service.rs  transfer_service.rs
crates/myvault-core/: Cargo.toml
crates/myvault-core/src/: atomic_move.rs  capability.rs  error.rs  index.rs  lib.rs  path.rs  revision.rs  transfer.rs  trash.rs  vault.rs  watcher.rs
crates/myvault-core/tests/: atomic_move.rs  case_rename.rs  content_move.rs  inventory.rs  note_read.rs  revision_checked_write.rs  safety.rs  transfer.rs  trash.rs  trash_listing.rs
crates/myvault-drive/: Cargo.toml
crates/myvault-drive/src/: client.rs  error.rs  lib.rs  model.rs  transfer.rs
crates/myvault-mutations/: Cargo.toml
crates/myvault-mutations/src/: error.rs  lib.rs  operation.rs  revision.rs  service.rs
crates/myvault-mutations/tests/: case_rename_service.rs  normal_move_service.rs  planning.rs  restore_service.rs  trash_service.rs
crates/myvault-platform-acl/: Cargo.toml
crates/myvault-platform-acl/src/: lib.rs
crates/myvault-platform-fs/: Cargo.toml
crates/myvault-platform-fs/src/: lib.rs  platform.rs
crates/myvault-private-fs/: Cargo.toml
crates/myvault-private-fs/src/: lib.rs
crates/myvault-recovery/: Cargo.toml
crates/myvault-recovery/src/: lib.rs
crates/myvault-recovery/tests/: recovery.rs
crates/myvault-snapshots/: Cargo.toml
crates/myvault-snapshots/src/: lib.rs  quarantine.rs  retention.rs
crates/myvault-snapshots/tests/: quarantine.rs  retention.rs  snapshots.rs
crates/myvault-sync-engine/: Cargo.toml
crates/myvault-sync-engine/src/: lib.rs  local_identity.rs  local_orchestration.rs  store.rs  sync_journal.rs
crates/myvault-sync-engine/src/conflict/: classifier.rs  evidence.rs  identity.rs  markdown.rs  materialization.rs  mod.rs
crates/myvault-sync-engine/tests/: conflict_matrix.rs  conflict_properties.rs  foundation.rs  held_private_root.rs  local_execution_store.rs  markdown_merge.rs  persistent_fault_matrix.rs  transfer_change_batch.rs  transfer_state.rs
crates/myvault-transfer/: Cargo.toml
crates/myvault-transfer/src/: lib.rs
crates/tauri-plugin-google-auth/: Cargo.toml
crates/tauri-plugin-google-auth/android/: build.gradle.kts  consumer-rules.pro
crates/tauri-plugin-google-auth/android/src/main/java/com/abhuri/myvault/googleauth/: GoogleAuthPlugin.kt
crates/tauri-plugin-google-auth/src/: error.rs  lib.rs  mobile.rs  models.rs
crates/tauri-plugin-private-root/: Cargo.toml
crates/tauri-plugin-private-root/android/: build.gradle.kts  settings.gradle
crates/tauri-plugin-private-root/android/src/main/java/com/abhuri/myvault/privateroot/: PrivateRootPlugin.kt
crates/tauri-plugin-private-root/src/: lib.rs  mobile.rs  transfer_store.rs
crates/tauri-plugin-private-root/tests/: transfer_fault_matrix.rs  transfer_store.rs
crates/tauri-plugin-vault-saf/: Cargo.toml
crates/tauri-plugin-vault-saf/android/: build.gradle.kts  consumer-rules.pro
crates/tauri-plugin-vault-saf/android/src/main/java/com/abhuri/myvault/vaultsaf/: SafConflictCapability.kt  VaultSafPlugin.kt
crates/tauri-plugin-vault-saf/android/src/test/java/com/abhuri/myvault/vaultsaf/: SafConflictCapabilityTest.kt  VaultSafBinaryTranscriptTest.kt  VaultSafChangeHintTest.kt  VaultSafRootIdentityTest.kt
crates/tauri-plugin-vault-saf/src/: lib.rs  mobile.rs  policy.rs
demo/synthetic-vault/: Start Here.md
demo/synthetic-vault/.obsidian/: app.json
demo/synthetic-vault/Knowledge/: Local-first Safety.md
demo/synthetic-vault/Notes/: Standalone.md  ภาษาไทยและ Unicode.md
demo/synthetic-vault/Projects/: myVault Demo.md
docs/demo/: ACCEPTANCE.md  PHASE1_HARDENING_ACCEPTANCE.md  RESULTS.md
docs/phase-0/: ACCEPTANCE.md  DEVICE_TEST.md  ENVIRONMENT.md  OAUTH_DRIVE.md  RESULTS.md
docs/sync/: PHASE3_ACCEPTANCE.md  PHASE3_ARCHITECTURE.md  R1_ACCEPTANCE.md  R2_ACCEPTANCE.md  R2_PLAN.md  R3_1_DURABLE_EVIDENCE_CONTRACT.md  R3_1_STEP6_EVIDENCE.md  R3_2_CONFLICT_MECHANICS.md  R3_2_STEP6_EVIDENCE.md  R3_ACCEPTANCE.md  R3_CONTRACTS.md  R3_PLAN.md  R3_USAGE.md  RESULTS.md
