[package]
name = "myvault-desktop-auth"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Desktop Google OAuth and OS credential storage spike for myVault"

[dependencies]
base64 = "0.22"
keyring = "4.1"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2.6"
url = "2.5"
zeroize = { version = "1", features = ["serde"] }

[dev-dependencies]
mockito = "1"
static_assertions = "1"
