[package]
name = "drive-sync-spike"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
getrandom = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
mockito = "1"
