[package]
name = "myvault-app-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Tauri-free safe application service boundary for myVault"

[dependencies]
myvault-core = { path = "../myvault-core" }
serde = { version = "=1.0.228", features = ["derive"] }
uuid = { version = "=1.20.0", features = ["serde", "v4"] }

[dev-dependencies]
serde_json = "=1.0.149"
tempfile = "=3.23.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"
