[package]
name = "myvault-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Filesystem and derived-index safety primitives for myVault"

[dependencies]
cap-fs-ext = "4.0.2"
cap-std = "4.0.2"
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
unicode-casefold = "0.2.0"
unicode-normalization = "0.1.24"

[target.'cfg(any(target_os = "android", target_os = "linux", target_os = "macos"))'.dependencies]
rustix = { version = "1.1.4", features = ["fs"] }

[dev-dependencies]
tempfile = "3.23.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"
