[package]
name = "myvault-drive"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Guarded Google Drive metadata and transfer adapter for myVault"
publish = false

[dependencies]
myvault-sync-engine = { path = "../myvault-sync-engine" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
secrecy = "=0.10.3"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sha2 = "0.10"

[dev-dependencies]
mockito = "=1.7.0"
static_assertions = "=1.1.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"
