[package]
name = "myvault-platform-acl"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Small safe facade over platform ACL inspection for myVault"

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
] }

[lints.clippy]
all = "deny"
pedantic = "deny"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[dev-dependencies]
tempfile = "=3.23.0"
