[package]
name = "myvault-platform-fs"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Isolated platform filesystem boundary for myVault"

[dependencies]
cap-fs-ext = "4.0.2"
cap-std = "4.0.2"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
rustix = { version = "1.1.4", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Wdk_Storage_FileSystem",
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
] }

[dev-dependencies]
tempfile = "3.23.0"

[lints.clippy]
all = "deny"
pedantic = "deny"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
