[package]
name = "myvault-private-fs"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Held-capability private filesystem boundary for myVault"

[dependencies]
cap-fs-ext = "=4.0.2"
cap-std = "=4.0.2"
myvault-platform-fs = { path = "../myvault-platform-fs" }

[target.'cfg(unix)'.dependencies]
rustix = { version = "=1.1.4", features = ["fs", "process"] }

[target.'cfg(target_os = "linux")'.dependencies]
xattr = { version = "=1.6.1", default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
xattr = { version = "=1.6.1", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
myvault-platform-acl = { path = "../myvault-platform-acl" }

[target.'cfg(windows)'.dependencies]
myvault-platform-acl = { path = "../myvault-platform-acl" }

[dev-dependencies]
tempfile = "=3.23.0"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dev-dependencies]
exacl = "=0.12.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"
