[package]
name = "myvault-recovery"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Durable recovery journal and conservative recovery decisions for myVault"

[dependencies]
blake3 = "=1.8.2"
cap-fs-ext = "=4.0.2"
cap-std = "=4.0.2"
myvault-core = { path = "../myvault-core" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
uuid = { version = "=1.20.0", features = ["serde", "v4"] }

[target.'cfg(unix)'.dependencies]
rustix = { version = "=1.1.4", features = ["process"] }

[target.'cfg(target_os = "linux")'.dependencies]
xattr = { version = "=1.6.1", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
myvault-platform-acl = { path = "../myvault-platform-acl" }

[dev-dependencies]
tempfile = "=3.23.0"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dev-dependencies]
exacl = "=0.12.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"
