[package]
name = "myvault-sync-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Crash-safe production sync state foundation for myVault"

[dependencies]
cap-fs-ext = "=4.0.2"
cap-std = "=4.0.2"
fs2 = "=0.4.3"
myvault-core = { path = "../myvault-core" }
myvault-platform-fs = { path = "../myvault-platform-fs" }
myvault-private-fs = { path = "../myvault-private-fs" }
rusqlite = { version = "=0.40.1", default-features = false, features = ["bundled"] }
serde = { version = "=1.0.228", features = ["derive"] }
sha2 = "=0.10.9"
similar = "=2.7.0"
unicode-casefold = "=0.2.0"
unicode-normalization = "=0.1.25"
uuid = { version = "=1.20.0", features = ["serde", "v4", "v5"] }

[target.'cfg(unix)'.dependencies]
rustix = { version = "=1.1.4", features = ["fs"] }

[dev-dependencies]
tempfile = "=3.23.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"
