[package]
name = "myvault-transfer"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Tauri-free guarded transfer orchestration for myVault"
publish = false

[dependencies]
myvault-sync-engine = { path = "../myvault-sync-engine" }
uuid = { version = "=1.20.0", features = ["v4"] }

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"
