[package]
name = "myvault"
version = "0.1.0"
description = "Local-first Markdown vault with Google Drive synchronization"
authors = ["A.Bhuri"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "myvault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
myvault-drive = { path = "../../../crates/myvault-drive" }
myvault-core = { path = "../../../crates/myvault-core" }
myvault-app-service = { path = "../../../crates/myvault-app-service" }
myvault-sync-engine = { path = "../../../crates/myvault-sync-engine" }
myvault-transfer = { path = "../../../crates/myvault-transfer" }

[target.'cfg(not(target_os = "android"))'.dependencies]
myvault-desktop-auth = { path = "../../../crates/desktop-auth" }
notify = "8"
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-google-auth = { path = "../../../crates/tauri-plugin-google-auth" }
tauri-plugin-private-root = { path = "../../../crates/tauri-plugin-private-root" }
tauri-plugin-vault-saf = { path = "../../../crates/tauri-plugin-vault-saf" }

[dev-dependencies]
tempfile = "3.23.0"
